--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<!-- <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency> -->
 
 	</dependencies>
 
@@ -93,4 +97,5 @@
 
 
 	
+
 </project>
